2005-10-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/header_templates.m4: templates for FFS.

	* m4/macros/check_mnttab_type.m4: on BSD44 systems, check for file
	system mount table name via the MOUNT_* mount(2) macros (because
	BSD44 keeps the mount table in the kernel).

	* configure.in: synchronise order of searching for mnttab entries
	and mount names.  The new order is "ext3 ext2 ffs ufs 4.2 4.3 4.4
	efs xfs jfs ultrix" (which would prefer ffs on BSD44 instead of
	ufs, and ext3 instead of ext2 on Linux).

	* include/am_defs.h: include <sys/statvfs.h> if it exists.

	* conf/nfs_prot/nfs_prot_netbsd1_4.h: NetBSD 3 has both statfs()
	and statvfs(), but the latter is preferred, so #define to use
	statvfs.

	* configure.in: check for statfs(), statvfs(), and
	<sys/statvfs.h>.

	* config.guess.long: strip trailing '.' on "netbsdelf3.0."
	(Beta).  Workaround for bug in config.guess.

	* config.{guess,sub}: update to latest versions.

2005-09-30  Christos Zoulas  <christos@zoulas.com>

	* fsinfo/fsi_util.c (set_ether_if): use INADDR_NONE instead of
	hard-coded value of -1.

	* include/amq_defs.h (AMQ_STRLEN): increase default size from 2KB
	to 16KB.  We can afford it these days.

	* libamu/strcasecmp.c (strcasecmp): use unsigned chars in
	tolower() to avoid sign/size promotion bugs.

	* libamu/xutil.c (switch_to_logfile): don't output to LOG_CONS by
	default (it's unfriendly).  If user really wants to, they can set
	it in /etc/syslog.conf.

2005-09-29  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (find_mt): if the auto mount type is used, pawd could
	go into an infinite loop since the mt_directory and mt_mountpoint
	fields are the same for auto mounts.  Solution: ignore type auto
	mounts, similar to toplvl.  Bug fix from Jonathan Chen
	<jon+amd@spock.org>.

	* README.attrcache: document test-attrcache script.

	* scripts/Makefile.am (noinst_SCRIPTS): build test-attrcache
	script.

	* configure.in: build scripts/test-attrcache script and chmod it